k8s/metrics/grafana.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: grafana
  name: grafana
  namespace: metrics
spec:
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: grafana
  type: NodePort

---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: grafana
  name: grafana
  namespace: metrics
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  strategy: {}
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
        - image: grafana/grafana:12.3.2
          name: grafana
          resources:
            requests:
              cpu: "1"
              memory: "100M"
            limits:
              cpu: "2"
              memory: "300M"
          volumeMounts:
            - name: datasource-volume
              mountPath: /etc/grafana/provisioning/datasources
              readOnly: true
      volumes:
        - name: datasource-volume
          configMap:
            name: grafana-datasources
