k8s/metrics/prometheus.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: prometheus
    group: metrics
    system: "true"
  name: prometheus
  namespace: metrics
spec:
  ports:
    - port: 9090
      protocol: TCP
      targetPort: 9090
  selector:
    app: prometheus
  type: ClusterIP

---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: prometheus
    group: metrics
    system: "true"
  name: prometheus
  namespace: metrics
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  strategy: {}
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      serviceAccountName: prometheus-sa
      containers:
        - image: prom/prometheus:v3.9.1
          name: prometheus
          resources:
            requests:
              cpu: "100m"
              memory: "20M"
            limits:
              cpu: "500m"
              memory: "100M"
          args:
            - "--config.file=/etc/prometheus/prometheus.yaml"
          ports:
            - containerPort: 9090
          volumeMounts:
            - name: config-volume
              mountPath: /etc/prometheus/prometheus.yaml
              subPath: prometheus.yaml
      volumes:
        - name: config-volume
          configMap:
            name: prometheus-config
