k8s/metrics/metrics-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: system-ingress
  namespace: metrics
spec:
  ingressClassName: nginx
  rules:
    - host: grafana.recommendation-system.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000
